# MLOps-Priyadip_Sau-M25CSA023

./: .gitignore  Dockerfile  Dockerfile.eval  HELPPUSHIMAGE.md  MODEL_CARD.md  README.md  docker overview.md  download_model.py  fintech_contract.yaml  help.md  index.html  install.py  m25csa023_ass_4_tuned_en_to_hi.py  orders_contract.yaml  pyproject.toml  q1_optuna.py  q1_test.py  q1_train.py  q2_detector.py  q2_fgsm.py  requirements.txt  rides_contract.yaml  setup.py  thermostat_contract.yaml  utils.py
Assignment-1/: README.md
Assignment-1/models/: Model.md
Assignment-1/results/: q1_a_results_summary.csv  q1_b_svm_results_summary.csv  (+2 more)
Priyadip_Sau_roll_M25CSA023_lab2_worksheet/: dataloader.py  joblab2.sh  model.py  train.py  utils.py
Question1/: Dockerfile  README.md  evaluate_bleu.py  input copy.txt  input.txt  output.txt  reference.rtf  reference.txt  requirements.txt  translate.py
Question2/: README.md  app.py  dataset.py  download_data.py  evaluate.py  history.json  metrics.py  requirements.txt  test_metrics.json  train.py  unet_model.py
m25csa023_ass_4_best_model/: README.md
results/: baseline_metrics.json  best_config.json  classification_report_local.txt  eval_hub_20260218_023325.json  eval_hub_20260218_093412.json  eval_local_20260217_105009.json  eval_local_post_train_20260217_081856.json  trial_data.json  tuned_metrics.json
rollno_ass_4_best_model/: README.md
scripts/: eval_from_hub.py  evaluate.py  push_to_hub.py  train.py
slurm/: train.sh
src/: config.py  data.py  dataset.py  model.py  utils.py
transformer_translation_final/: README.md
(+36 files in other folders)
